fix: scss to css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <head>
-    <link rel="stylesheet" href="app.scss">
+    <link rel="stylesheet" href="app.css">
 </head>
 <div class="myText">Hello :DDDDD</div>
